Splitted text in paragraph

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Experienced Software Engineer with a demonstrated history of working in distributed, back-end, server side software and financial services industry. In addition to that, experienced in working on Data Science and Machine Learning solutions for industry level data sets</p>
+            <p>Experienced Software Engineer with a demonstrated history of working in distributed, back-end, server side software and financial services industry. </p>
+            <p>In addition to that, experienced in working on Data Science and Machine Learning solutions for industry level data sets</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
